# Flutter-Multi-User-Chat-as-a-Frappe-Custom-App

./: .gitattributes  .gitignore  README.md  common_site_config.json  docker-compose.yml  docker-entrypoint.sh
docs/: ARCHITECTURE.md  DEMO.md  SETUP.md
flutter_chat/: pubspec.yaml
flutter_chat/android/app/: build.gradle.kts
flutter_chat/android/app/src/main/: AndroidManifest.xml
flutter_chat/android/app/src/main/kotlin/com/secondorigin/flutter_chat/: MainActivity.kt
flutter_chat/ios/Runner.xcodeproj/: project.pbxproj
flutter_chat/lib/: main.dart
flutter_chat/lib/config/: app_config.dart
flutter_chat/lib/models/: chat.dart  message.dart  user.dart
flutter_chat/lib/screens/: chat_list_screen.dart  chat_screen.dart  login_screen.dart  new_chat_screen.dart  signup_screen.dart
flutter_chat/lib/services/: auth_service.dart  chat_service.dart  realtime_service.dart
flutter_chat/test/: widget_test.dart
flutter_chat/web/: index.html
frappe_chat/: pyproject.toml  setup.py  setup_users.py
frappe_chat/frappe_chat/: api.py  hooks.py  middleware.py  rate_limiter.py  utils.py
frappe_chat/frappe_chat/chat/: __init__.py
frappe_chat/frappe_chat/chat/doctype/chat/: chat.json  chat.py
frappe_chat/frappe_chat/chat/doctype/chat_message/: chat_message.json  chat_message.py
frappe_chat/frappe_chat/chat/doctype/chat_participant/: chat_participant.json  chat_participant.py
