[project]
name = "frappe_chat"
version = "0.1.0"
description = "Multi-user chat system for Frappe"
authors = [
    { name = "TuriumAI", email = "chat@turium.ai" }
]
requires-python = ">=3.10"
dependencies = ["frappe"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "frappe_chat"
